15) More speed init.d<br>
16) Always use long preamble for CCK. This need to correct work mixed mode<br>
17) Fix ssh and samba work after login name change<br>
18) Uclibc fix wchar issue<br>
<br>
<b>1.3.x</b><br>
1) More correct mount tmpfs and decrase mem usadge<br>
2) Fix some compile warnings<br>
3) Add autodetect flash type NOR->SPI<br>
4) Fix race in libnvram<br>
5) Use kernel native string functions in wifi driver<br>
6) Some fix iptables code<br>
7) Fix defaults for init wifi<br>
8) Fix update firmware at small memory device<br>
9) Some potentional leak fix<br>
10) Remove dead code in wifi and nvram<br>
11) Some wifi function now works in native mode<br>
12) Fix build if all wifi driver options is set<br>
13) Full kernel code review and cleanup<br>
14) Drop unused, dead and potentional buggy code<br>
15) Full cycle of retraining flash on command fs cleanall<br>
16) Increase kernel padded size. Try fix crash mapping<br>
17) Update AP driver from 2.3.0.0 to 2.4.3.3 version<br>
18) Update STA driver from 2.2.0.0 to 2.3.3.3 version<br>
19) Update HW_NAT kernel code and add hw_nat userspace utils<br>
20) Add LCP echo adaptive options on VPN page. Default on<br>
21) Use opensource toolchain at 4.2.4 gcc for build all coe in project. No binary from Ralink needed<br>
22) Update boot code<br>
23) Some optimization and fix in scripts<br>
24) Drop noatime function for small save CPU ticks<br>
25) Replace original KabInet auth to small version by thMiron and default on (need gui write)<br>
26) Integrate kernel mode pppoe/ipv6 pass through (need add in gui)<br>

<br><br>
<b>For support see:</b><br>
<a href="http://acorp.ru">acorp.ru - Acorp Electronics Inc.</a><br>
<a href="http://ddixlab.ru">ddixlab.ru - Laboratory of built in systems.
</a><br>
<br><br>
<b>News and changes in Russian:</b><br>
<a href="http://sadnet.ru">sadnet.ru - Development opensource routers firmware</a><br>
<br><br>
<b>Bug report please send sfstudio[at]mail.ru</b>
<br>
<br>
<br>