@@ -1163,6 +1163,7 @@ CONFIG_RT2860V2_AP_IGMP_SNOOP=y
 CONFIG_RT2860V2_80211N_DRAFT3=y
 # CONFIG_RALINK_RT2880_AP_DBG is not set
 # CONFIG_RT2860V2_SET_MAC_FROM_EEPROM is not set
+CONFIG_RT2860V2_AP_BRIDGE_FASTPATH=y
 
 #
 # STA/Client MODE Ralink RT3xx/RT28xx wireless driver.
