@@ -151,3 +151,8 @@ config RT2860V2_SET_MAC_FROM_EEPROM
 	bool "Read and set MAC from MTD/EEPROM."
 	default n
 	depends on RT2860V2_AP
+
+config RT2860V2_AP_BRIDGE_FASTPATH
+	bool "Bridge wlan2lan operation offload"
+	default y
+	depends on RT2860V2_AP
